--- a/src/app/components/modals/view-purchase-order/view-purchase-order.component.scss
+++ b/src/app/components/modals/view-purchase-order/view-purchase-order.component.scss
@@ -5,3 +5,7 @@
 .custom-bg-orange {
   background-color: #3f3f3f;
 }
+
+td {
+  word-break: break-word;
+}
