--- a/src/app/components/modals/view-quotation/view-quotation.component.scss
+++ b/src/app/components/modals/view-quotation/view-quotation.component.scss
@@ -5,3 +5,7 @@
 .custom-bg-orange {
   background-color: #f0b663;
 }
+
+td {
+  word-break: break-word;
+}
